--- a/SQL/SQL_Tutorial.tex
+++ b/SQL/SQL_Tutorial.tex
@@ -56,6 +56,12 @@
   sensitive=false,
 }
 
+\lstdefinelanguage{SQLite}{
+  language=SQL,
+  sensitive=true,	
+  ndkeywords={INTEGER, TEXT}
+}
+
 \lstset {%
   % General design
   backgroundcolor=\color{backcolour},
@@ -73,7 +79,7 @@
   stringstyle=\color{editorOcher}\ttfamily,
   commentstyle=\color{brown}\ttfamily,
   % Code
-  language=SQL,
+  language=SQLite,
   alsodigit={.:;},	
   tabsize=2,
   showtabs=false,
@@ -168,4 +174,59 @@ Let us break down the components of a statement:
 \end{enumerate}
 The structure of SQL statements vary. The number of lines used does not matter. A statement can be written all on one line, or split up across multiple lines if it makes it easier to read. 
 
+\subsection{Create}
+\colorbox{lightgray}{CREATE} statements allow us to create a new table in the database. You can use the \colorbox{lightgray}{CREATE} statement anytime you want to create a new table from scratch. The statement below creates a new table named celebs.
+\begin{lstlisting}
+CREATE TABLE celebs (
+   id INTEGER, 
+   name TEXT, 
+   age INTEGER
+);
+\end{lstlisting}
+\begin{enumerate}[leftmargin = *]
+\item \colorbox{lightgray}{CREATE TABLE} is a clause that tells SQL you want to create a new table.
+\item \colorbox{lightgray}{celebs} is the name of the table.
+\item \colorbox{lightgray}{(id INTEGER, name TEXT, age INTEGER)} is a list of parameters defining each column, or attribute in the table and its data type:
+\begin{itemize}
+\item \colorbox{lightgray}{id} is the first column in the table. It stores values of data type \colorbox{lightgray}{INTEGER}
+\item \colorbox{lightgray}{name} is the second column in the table. It stores values of data type \colorbox{lightgray}{TEXT}
+\item \colorbox{lightgray}{age} is the third column in the table. It stores values of data type \colorbox{lightgray}{INTEGER}
+\end{itemize}
+\end{enumerate}
+
+\subsection{Insert}
+The \colorbox{lightgray}{INSERT} statement inserts a new row into a table. You can use the \colorbox{lightgray}{INSERT} statement when you want to add new records. The statement below enters a record for Justin Bieber into the celebs table.
+\begin{lstlisting}
+INSERT INTO celebs (id, name, age) 
+VALUES (1, "Justin Bieber", 22);
+\end{lstlisting}
+\begin{enumerate}[leftmargin = *]
+\item \colorbox{lightgray}{INSERT INTO} is a clause that adds the specified row or rows.
+\item \colorbox{lightgray}{celebs} is the name of the table the row is added to.
+\item \colorbox{lightgray}{(id, name, age)} is a parameter identifying the columns that data will be inserted into.
+\item \colorbox{lightgray}{VALUES} is a clause that indicates the data being inserted. \colorbox{lightgray}{(1, "Justin Bieber", 22)} is a parameter identifying the values being inserted.
+\begin{itemize}
+\item \colorbox{lightgray}{1} is an integer that will be inserted into the \colorbox{lightgray}{id} column
+\item \colorbox{lightgray}{"Justin Bieber"} is text that will be inserted into the \colorbox{lightgray}{name} column
+\item \colorbox{lightgray}{22} is an integer that will be inserted into the \colorbox{lightgray}{age} column
+\end{itemize}
+\end{enumerate}
+
+\subsection{Select} 
+\colorbox{lightgray}{SELECT} statements are used to fetch data from a database. In the statement below, \colorbox{lightgray}{SELECT} returns all data in the name column of the celebs table.
+\begin{lstlisting}
+SELECT name FROM celebs;
+\end{lstlisting}
+\begin{enumerate}[leftmargin = *]
+\item \colorbox{lightgray}{SELECT} is a clause that indicates that the statement is a query. You will use \colorbox{lightgray}{SELECT} every time you query data from a database.
+\item \colorbox{lightgray}{name} specifies the column to query data from.
+\item \colorbox{lightgray}{FROM celebs} specifies the name of the table to query data from. In this statement, data is queried from the \colorbox{lightgray}{celebs} table.
+\end{enumerate}
+You can also query data from all columns in a table with \colorbox{lightgray}{SELECT}.
+\begin{lstlisting}
+SELECT * FROM celebs;
+\end{lstlisting}
+\colorbox{lightgray}{*} is a special wildcard character that we have been using. It allows you to select every column in a table without having to name each one individually. Here, the result set contains every column in the \colorbox{lightgray}{celebs} table.
+
+\colorbox{lightgray}{SELECT} statements always return a new table called the \textit{result set}.
 \end{document}
