--- a/SQL/SQL_Tutorial.tex
+++ b/SQL/SQL_Tutorial.tex
@@ -59,7 +59,7 @@
 \lstdefinelanguage{SQLite}{
   language=SQL,
   sensitive=true,	
-  ndkeywords={INTEGER, TEXT}
+  ndkeywords={INTEGER, TEXT, IS, NULL}
 }
 
 \lstset {%
@@ -246,4 +246,53 @@ ADD COLUMN twitter\_handle TEXT;
 \end{itemize}
 \item \colorbox{lightgray}{NULL} is a special value in SQL that represents missing or unknown data. Here, the rows that existed before the column was added have \colorbox{lightgray}{NULL} ($\varnothing$) values for \colorbox{lightgray}{twitter\_handle}.
 \end{enumerate}
+
+\subsection{Update}
+The \colorbox{lightgray}{UPDATE} statement edits a row in a table. You can use the \colorbox{lightgray}{UPDATE} statement when you want to change existing records. The statement below updates the record with an \colorbox{lightgray}{id} value of \colorbox{lightgray}{4} to have the \colorbox{lightgray}{twitter\_handle} \colorbox{lightgray}{@taylorswift13}.
+\begin{lstlisting}
+UPDATE celebs 
+SET twitter_handle = "@taylorswift13"
+WHERE id = 4; 
+\end{lstlisting}
+\begin{enumerate}[leftmargin = *]
+\item \colorbox{lightgray}{UPDATE} is a clause that edits a row in the table.
+\item \colorbox{lightgray}{celebs} is the name of the table.
+\item \colorbox{lightgray}{SET} is a clause that indicates the column to edit.
+\begin{itemize}
+\item \colorbox{lightgray}{twitter\_handle} is the name of the column that is going to be updated
+\item \colorbox{lightgray}{@taylorswift13} is the new value that is going to be inserted into the \colorbox{lightgray}{twitter\_handle} column.
+\item \colorbox{lightgray}{WHERE} is a clause that indicates which row(s) to update with the new column value. Here the row with a \colorbox{lightgray}{4} in the \colorbox{lightgray}{id} column is the row that will have the \colorbox{lightgray}{twitter\_handle} updated to \colorbox{lightgray}{@taylorswift13}.
+\end{itemize}
+\end{enumerate}
+
+\subsection{Delete}
+The \colorbox{lightgray}{DELETE FROM} statement deletes one or more rows from a table. You can use the statement when you want to delete existing records. The statement below deletes all records in the \colorbox{lightgray}{celeb} table with no \colorbox{lightgray}{twitter\_handle}:
+\begin{lstlisting}
+DELETE FROM celebs 
+WHERE twitter_handle IS NULL;
+\end{lstlisting}
+\begin{enumerate}[leftmargin = *]
+\item \colorbox{lightgray}{DELETE FROM} is a clause that lets you delete rows from a table.
+\item \colorbox{lightgray}{celebs} is the name of the table we want to delete rows from.
+\item \colorbox{lightgray}{WHERE} is a clause that lets you select which rows you want to delete. Here we want to delete all of the rows where the \colorbox{lightgray}{twitter\_handle} column \colorbox{lightgray}{IS NULL}.
+\item \colorbox{lightgray}{IS NULL} is a condition in SQL that returns true when the value is \colorbox{lightgray}{NULL} and false otherwise.
+\end{enumerate}
+
+\subsection{Constraints}
+Constraints that add information about how a column can be used are invoked after specifying the data type for a column. They can be used to tell the database to reject inserted data that does not adhere to a certain restriction. The statement below sets constraints on the celebs table.
+
+CREATE TABLE celebs (
+   id INTEGER PRIMARY KEY, 
+   name TEXT UNIQUE,
+   date_of_birth TEXT NOT NULL,
+   date_of_death TEXT DEFAULT 'Not Applicable'
+);
+1. PRIMARY KEY columns can be used to uniquely identify the row. Attempts to insert a row with an identical value to a row already in the table will result in a constraint violation which will not allow you to insert the new row.
+
+2. UNIQUE columns have a different value for every row. This is similar to PRIMARY KEY except a table can have many different UNIQUE columns.
+
+3. NOT NULL columns must have a value. Attempts to insert a row without a value for a NOT NULL column will result in a constraint violation and the new row will not be inserted.
+
+4. DEFAULT columns take an additional argument that will be the assumed value for an inserted row if the new row does not specify a value for that column.
+
 \end{document}
